[tool.poetry]
name = "kviznaloga"
version = "1"
description = "Ni opisa"
authors = ["Your Name <you@example.com>"]
license = "NI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
great-expectations = "^0.18.13"
dvc = "^3.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
